storage wrap fix

--- a/src/css/styles/desk/storage.css
+++ b/src/css/styles/desk/storage.css
@@ -12,8 +12,11 @@
 }
 
 #storage .wrap {
-    width: 48px;
-    height: 48px;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #storage #dump {
